<resources>
    <string name="app_name">Application</string>
    <string name="btn_login">Login</string>
    <string name="btn_registration">Registration</string>
    <string name="create_new_account">Create New Account</string>
    <string name="pandora_box_all_rights_reserved">© Pandora Box, All rights reserved.</string>
    <string name="input_enter_email">Enter Email</string>
    <string name="input_enter_password">Enter Password</string>
    <string name="input_enter_confirm_password">Enter Confirm Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="please_wait">Please Wait…</string>
    <string name="input_full_name">Full Name</string>
    <string name="input_username">Username</string>
    <string name="input_country">Country</string>
    <string name="input_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="notification_fragment">Notification Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="txt_post">POST</string>
    <string name="input_description">Description...</string>
    <string name="input_search">Search</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>