<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorDarkerGrey"
    android:layout_height="match_parent"
    tools:context=".Activity.SetupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:foregroundGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/etUser_FullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/input_full_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/etUser_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/input_username"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <EditText
                    android:id="@+id/etUser_Country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_country"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/input_country"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/info_saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorCreateNewAccount"
                android:padding="10dp"
                android:text="@string/input_save"
                android:textColor="@color/colorWhite" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        android:gravity="bottom"
        android:text="@string/pandora_box_all_rights_reserved" />

</RelativeLayout>