<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorProgressBG"
    tools:context=".Activity.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <androidx.cardview.widget.CardView

            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:foregroundGravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/etRegisterEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="@dimen/_5sdp"
                        android:ems="10"
                        android:hint="@string/input_enter_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/etRegisterPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="@dimen/_5sdp"
                        android:ems="10"
                        android:hint="@string/input_enter_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10sdp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp">

                    <EditText
                        android:id="@+id/etRegisterConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@null"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="@dimen/_5sdp"
                        android:ems="10"
                        android:hint="@string/input_enter_confirm_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10sdp" />

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/mRegistrationButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="15dp"
                    android:background="@color/colorCreateNewAccount"
                    android:text="@string/btn_registration"
                    android:textColor="@color/colorWhite"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:id="@+id/rLayoutBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView1">

            <TextView
                android:id="@+id/reflectedToSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/already_have_an_account_sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mRegProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorProgressBG"
            android:padding="85dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:text="@string/please_wait"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_3sdp"
        android:textColor="@color/colorWhite"
        android:gravity="bottom"
        android:text="@string/pandora_box_all_rights_reserved" />

</RelativeLayout>