<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_margin="@dimen/_5sdp"
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_gravity="center"
                    android:id="@+id/profileImg_Post"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_person" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/post_FullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"

                        android:text="@string/input_full_name"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/post_Username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"

                        android:text="@string/input_username"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btnFollow"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:text="@string/follow"
                android:background="@color/colorCreateNewAccount"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>